Super admin login

--- a/jasc/login/src/index.css
+++ b/jasc/login/src/index.css
@@ -93,7 +93,7 @@ ul {
   width: 50%;
   height: 80%;
   color: #181717;
-  background-color: black;
+  background-color: white;
   box-shadow: 3px 14px 80px rgba(222, 223, 225, 0.2);
   padding: 40px 55px 45px 55px;
   border-radius: 20px;
