--- a/jasc/login/src/App.css
+++ b/jasc/login/src/App.css
@@ -75,6 +75,7 @@ span {
 .navbar-light {
   background-color: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  display: flex;
 }
 
 .auth-wrapper {
@@ -116,3 +117,4 @@ span {
 .forgot-password a {
   color: #167bff;
 }
+
