--- a/front-end/jasc/src/styles/Homepage.css
+++ b/front-end/jasc/src/styles/Homepage.css
@@ -1,16 +1,47 @@
 /* Homepage.css */ 
-  .header {
-    background-color: #333; /* Set the background color of the header */
-    color: white;
-    padding: 10px;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-  }
-  
-  .title {
+*{
+  margin: 0px;
+  padding: 0px;
+}
+.title {
     margin: 0;
     font-size: 1.5rem;
   }
+
+  .nav-bar{
+    background-color:rgb(0, 61, 165);
+    height: 40px;
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 0px;
+
+  }
+  .brand{
+    align-self: center;
+  }
+  .logo{
+    color: rgb(250, 248, 248);
+    margin-left: 20px;
+  }
+  .options{
+    display: flex;
+    align-items: center;
+    margin-right: 30%;
+  }
+
+  .button {
+    padding: 8px 16px;
+    background-color: #f1f4f6;
+    color: #fff;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.home{
+  color: black;
+}
   
