--- a/front-end/jasc/src/index.css
+++ b/front-end/jasc/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body, html {
+  font-family: 'Open Sans', sans-serif;
+  color: #003DA5; /* SLU Blue */
+  background-color: #FFF; /* White background */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.footer{
+  position:fixed;
+  left: 0;
+  bottom:0;
+  width:100%;
+  
 }
