--- a/front-end/jasc/src/styles/Homepage.css
+++ b/front-end/jasc/src/styles/Homepage.css
@@ -1,57 +1,119 @@
-/* Homepage.css */ 
-*{
-  margin: 0px;
-  padding: 0px;
-}
-.title {
-    margin: 0;
-    font-size: 1.5rem;
-  }
-
-  .nav-bar{
-    background-color:rgb(0, 61, 165);
-    height: 40px;
-    width: 100vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 0px;
-
-  }
-  .brand{
-    align-self: center;
-  }
-  .logo{
-    color: rgb(250, 248, 248);
-    margin-left: 20px;
-  }
-  .options{
-    display: flex;
-    align-items: center;
-    margin-right: 30%;
-  }
-
-  .button {
-    padding: 8px 16px;
-    background-color: #f1f4f6;
-    color: #fff;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    font-size: 1rem;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; 
+  font-family: 'Arial', sans-serif; 
 }
 
-.home {
-  color: black;
+.title, h3, h1, h2, h4, h5, h6 {
+  color: white;
+  margin: 20px 0;
+  font-size: 2rem; 
+}
+
+.nav-bar {
+  background-color: #003DA5; 
+  height: 80px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px; 
+}
+
+.nav-link {
+  transition: background-color 0.3s, border-bottom 0.3s; 
+}
+
+.brand, .options a {
+  color: #fff;
+  text-decoration: none; 
+}
+
+.logo {
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.options {
+  display: flex;
+  align-items: center;
+  margin-right: 20px; 
+}
+
+.options a {
+  margin-left: 10px; 
+}
+
+.button {
  
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px; 
+  cursor: pointer;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition: background-color 0.3s; 
 }
 
-.referral-form{
-  color: black;
+.button:hover {
+ 
+  color: #FFF;
+  border-bottom: 3px solid #FFF;
 }
-  
+.footer {
+  background-color: #003DA5;
+  color: white;
+  padding: px 10px;
+  height: min-content;
+  text-align: center;
+  display: auto; 
+  position: relative;/* Temporarily set to block to ensure visibility */
+}
 
-.questionnaire-form{
-  color: black;
+.footer-content {
+  display: flex;
+  justify-content: space-around; 
+  align-items: start; 
+  flex-wrap: wrap;
 }
-  
+
+.footer-content div {
+  margin: 10px; 
+}
+
+
+
+.social-links a {
+  color: white; 
+  text-decoration: none; 
+  margin: 0 10px; 
+}
+
+.social-links a:hover {
+  text-decoration: underline; 
+}
+
+.logo-image {
+  width: 50px;
+  height: auto;
+  margin-right: 10px;
+}
+
+/* Briefing container styles */
+.briefing-container {
+  color: #003DA5;
+  background-color: white;
+  padding: 50px 15px 15px 15px;
+  border-radius: 15px;
+  width: 30%; 
+  margin: 50px auto; /* Keeps the container centered horizontally and adds space from the top */
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Subtle shadow for depth without 3D effect */
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.briefing-container:hover {
+  background-color: #003DA5;
+  color: white;
+}
