--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,10 +1,7 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body, html {
+  font-family: 'Open Sans', sans-serif;
+  color: #003DA5; /* SLU Blue */
+  background-color: #FFF; /* White background */
 }
 
 code {
