--- a/front-end/jasc/src/styles/Homepage.css
+++ b/front-end/jasc/src/styles/Homepage.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -6,20 +5,24 @@
   font-family: 'Arial', sans-serif; 
 }
 
-.title {
+.title, h3, h1, h2, h4, h5, h6 {
+  color: white;
   margin: 20px 0;
   font-size: 2rem; 
-  color: #333;
 }
 
 .nav-bar {
-  background-color: #005f73; 
+  background-color: #003DA5; 
   height: 80px;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px; 
+}
+
+.nav-link {
+  transition: background-color 0.3s, border-bottom 0.3s; 
 }
 
 .brand, .options a {
@@ -43,32 +46,30 @@
 }
 
 .button {
-  padding: 10px 20px; 
-  color: #f3f1f1; 
+ 
+  color: white;
+  padding: 10px 20px;
   border: none;
   border-radius: 10px; 
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 16px;
+  margin: 4px 2px;
   transition: background-color 0.3s; 
 }
 
 .button:hover {
-  background-color: #ff9f1c; 
-
+ 
+  color: #FFF;
+  border-bottom: 3px solid #FFF;
 }
-
-.home, .referral-form, .questionnaire-form {
-  margin: 15px;
-  padding: 15px;
-  border-radius: 15px; 
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
 .footer {
-  background-color: #333;
-  color: white; 
-  padding: 20px 0; 
+  background-color: #003DA5;
+  color: white;
+  padding: px 10px;
+  height: min-content;
   text-align: center;
+  display: auto; 
+  position: relative;/* Temporarily set to block to ensure visibility */
 }
 
 .footer-content {
@@ -82,9 +83,7 @@
   margin: 10px; 
 }
 
-.footer h3 {
-  margin-bottom: 10px;
-}
+
 
 .social-links a {
   color: white; 
@@ -97,16 +96,24 @@
 }
 
 .logo-image {
-  width: 50px; /* Adjust width as needed */
-  height: auto; /* Maintain aspect ratio */
-  margin-right: 10px; /* Optional: Add margin between logos */
+  width: 50px;
+  height: auto;
+  margin-right: 10px;
 }
 
-
-@media (max-width: 600px) {
-  .footer-content {
-    flex-direction: column; 
-    align-items: center;
-  }
+/* Briefing container styles */
+.briefing-container {
+  color: #003DA5;
+  background-color: white;
+  padding: 50px 15px 15px 15px;
+  border-radius: 15px;
+  width: 30%; 
+  margin: 50px auto; /* Keeps the container centered horizontally and adds space from the top */
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Subtle shadow for depth without 3D effect */
+  transition: background-color 0.3s, color 0.3s;
 }
 
+.briefing-container:hover {
+  background-color: #003DA5;
+  color: white;
+}
