--- a/front-end/src/styles/ReferralForm.css
+++ b/front-end/src/styles/ReferralForm.css
@@ -22,6 +22,7 @@ body {
 
 .form-group {
   margin-bottom: 1rem;
+  text-align: left;
 }
 
 .form-group label {
@@ -44,14 +45,23 @@ body {
 .radio-buttons, .checkbox-container {
   display: flex;
   flex-wrap: wrap; /* Allows for wrapping */
-  justify-content: center; /* Centers the items */
-  gap: 15px; /* Spacing between items */
+  justify-content: left; /* Centers the items */
+  gap: 11px; /* Spacing between items */
+  text-align: left;
+}
+.radio-button-icons{
+  display: flex;
+  flex-wrap: wrap; /* Allows for wrapping */
+  justify-content: left; /* Centers the items */
+  gap: 13px; /* Spacing between items */
+  text-align: left;
 }
 
 /* Individual label styles for checkboxes and radio buttons */
 .radio-buttons label, .checkbox-container label {
+  justify-content: left;
   display: flex;
-  align-items: center; /* Aligns the checkbox/radio and label text */
+  align-items: left; /* Aligns the checkbox/radio and label text */
 }
 
 /* Submit button style */
@@ -78,7 +88,7 @@ input[type='submit']:hover {
 
   .radio-buttons, .checkbox-container {
     /* Stack the checkboxes/radio buttons for mobile */
-    justify-content: flex-start;
+    justify-content: left;
   }
 }
 
