--- a/front-end/src/styles/AdminDashBoard.css
+++ b/front-end/src/styles/AdminDashBoard.css
@@ -1,8 +1,6 @@
 .admin-dashboard-container{
     height: 100%;
     width: 100%;
-    border: 2px solid #000; /* Black border, 2 pixels thick */
-    padding: 20px; /* Adds padding inside the container */
 }
 .navbar{
     display: flex;
@@ -101,6 +99,10 @@
     text-overflow: ellipsis; /* Adds an ellipsis if the text is too long to fit */
     font-size: 25px; /* Adjust font-size as needed */
     font-weight: bold;
+    border: 1px solid #333; /* Adds a dark grey border */
+    padding: 10px; /* Adds padding inside the h3 element */
+    /* Ensure the width takes into account the padding and border */
+    box-sizing: border-box;
     /* Add any additional styling as required */
 }
 .matched-pair-box{
@@ -110,8 +112,6 @@
     margin-left: 10px;
     overflow: auto;
     border-radius: 10px;
-    border: 1px solid #333; /* Dark grey border */
-    padding: 20px; /* Padding added here */
 }
 
 .paired-data{
