--- a/front-end/src/styles/ReferralForm.css
+++ b/front-end/src/styles/ReferralForm.css
@@ -113,3 +113,39 @@ input[type='submit']:hover {
 .error{
   color: red;
 }
+/* ReferralForm.css */
+
+.button {
+  text-align: center;
+  margin-top: 20px; 
+}
+
+.button button {
+  padding: 8px 15px; 
+  font-size: 14px;
+  background-color: #003DA5;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.button button:hover {
+  background-color: #002D72;
+}
+
+.vertical-center {
+  height: 50px;
+  position: relative;
+  bottom: 25px;
+}
+
+.download-button {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%; 
+  transform: translate(-50%, -50%);
+  padding: 10px 20px;
+  padding-bottom: 10px;
+}
