--- a/front-end/src/styles/EmployerRegistrationForm.css
+++ b/front-end/src/styles/EmployerRegistrationForm.css
@@ -108,3 +108,19 @@ input[type="file"] {
 .form-question {
     margin-bottom: 20px;
 }
+
+.vertical-center {
+    height: 50px;
+    position: relative;
+    bottom: 25px;
+  }
+  
+  .download-button {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%; 
+    transform: translate(-50%, -50%);
+    padding: 10px 20px;
+    padding-bottom: 10px;
+  }
