--- a/front-end/src/styles/AdminLogin.css
+++ b/front-end/src/styles/AdminLogin.css
@@ -2,7 +2,7 @@
 
 .admin-login-container {
     width: 300px;
-    margin: 0 auto;
+    margin: 40px auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
